// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Pager matches the snapshot 1`] = `
ShallowWrapper {
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <Pager
    breakLabel="..."
    classes={
      Object {
        "btn": "btn",
        "disabled": "disabled",
        "next": "next",
        "pager": "pager",
        "prev": "prev",
      }
    }
    disableInitialCallback={false}
    hideNumbers={false}
    marginPagesDisplayed={3}
    nextLabel="Next"
    pageCount={10}
    pageRangeDisplayed={2}
    previousLabel="Previous"
  />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateError": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "host",
    "props": Object {
      "children": Array [
        <li
          className="btn prev disabled"
          onClick={[Function]}
          tabIndex="0"
        >
          <Jss(Icon)
            colors={
              Array [
                "#adb4bb",
              ]
            }
            iconName="arrowDown"
            transition="0.3s all"
          />
           
          Previous
        </li>,
        Array [
          <Jss(Page)
            onClick={[Function]}
            page={1}
            selected={true}
          />,
          <Jss(Page)
            onClick={[Function]}
            page={2}
            selected={false}
          />,
          <Jss(Page)
            onClick={[Function]}
            page={3}
            selected={false}
          />,
          <Jss(Break)
            label="..."
          />,
          <Jss(Page)
            onClick={[Function]}
            page={8}
            selected={false}
          />,
          <Jss(Page)
            onClick={[Function]}
            page={9}
            selected={false}
          />,
          <Jss(Page)
            onClick={[Function]}
            page={10}
            selected={false}
          />,
        ],
        <li
          className="btn next"
          onClick={[Function]}
          tabIndex="0"
        >
          Next
           
          <Jss(Icon)
            colors={
              Array [
                "#adb4bb",
              ]
            }
            iconName="arrowDown"
            transition="0.3s all"
          />
        </li>,
      ],
      "className": "pager",
    },
    "ref": null,
    "rendered": Array [
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "children": Array [
            <Jss(Icon)
              colors={
                Array [
                  "#adb4bb",
                ]
              }
              iconName="arrowDown"
              transition="0.3s all"
            />,
            " ",
            "Previous",
          ],
          "className": "btn prev disabled",
          "onClick": [Function],
          "tabIndex": "0",
        },
        "ref": null,
        "rendered": Array [
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "class",
            "props": Object {
              "colors": Array [
                "#adb4bb",
              ],
              "iconName": "arrowDown",
              "transition": "0.3s all",
            },
            "ref": null,
            "rendered": null,
            "type": [Function],
          },
          " ",
          "Previous",
        ],
        "type": "li",
      },
      Object {
        "instance": null,
        "key": "1",
        "nodeType": "class",
        "props": Object {
          "onClick": [Function],
          "page": 1,
          "selected": true,
        },
        "ref": null,
        "rendered": null,
        "type": [Function],
      },
      Object {
        "instance": null,
        "key": "2",
        "nodeType": "class",
        "props": Object {
          "onClick": [Function],
          "page": 2,
          "selected": false,
        },
        "ref": null,
        "rendered": null,
        "type": [Function],
      },
      Object {
        "instance": null,
        "key": "3",
        "nodeType": "class",
        "props": Object {
          "onClick": [Function],
          "page": 3,
          "selected": false,
        },
        "ref": null,
        "rendered": null,
        "type": [Function],
      },
      Object {
        "instance": null,
        "key": "4",
        "nodeType": "class",
        "props": Object {
          "label": "...",
        },
        "ref": null,
        "rendered": null,
        "type": [Function],
      },
      Object {
        "instance": null,
        "key": "8",
        "nodeType": "class",
        "props": Object {
          "onClick": [Function],
          "page": 8,
          "selected": false,
        },
        "ref": null,
        "rendered": null,
        "type": [Function],
      },
      Object {
        "instance": null,
        "key": "9",
        "nodeType": "class",
        "props": Object {
          "onClick": [Function],
          "page": 9,
          "selected": false,
        },
        "ref": null,
        "rendered": null,
        "type": [Function],
      },
      Object {
        "instance": null,
        "key": "10",
        "nodeType": "class",
        "props": Object {
          "onClick": [Function],
          "page": 10,
          "selected": false,
        },
        "ref": null,
        "rendered": null,
        "type": [Function],
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "children": Array [
            "Next",
            " ",
            <Jss(Icon)
              colors={
                Array [
                  "#adb4bb",
                ]
              }
              iconName="arrowDown"
              transition="0.3s all"
            />,
          ],
          "className": "btn next",
          "onClick": [Function],
          "tabIndex": "0",
        },
        "ref": null,
        "rendered": Array [
          "Next",
          " ",
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "class",
            "props": Object {
              "colors": Array [
                "#adb4bb",
              ],
              "iconName": "arrowDown",
              "transition": "0.3s all",
            },
            "ref": null,
            "rendered": null,
            "type": [Function],
          },
        ],
        "type": "li",
      },
    ],
    "type": "ul",
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "host",
      "props": Object {
        "children": Array [
          <li
            className="btn prev disabled"
            onClick={[Function]}
            tabIndex="0"
          >
            <Jss(Icon)
              colors={
                Array [
                  "#adb4bb",
                ]
              }
              iconName="arrowDown"
              transition="0.3s all"
            />
             
            Previous
          </li>,
          Array [
            <Jss(Page)
              onClick={[Function]}
              page={1}
              selected={true}
            />,
            <Jss(Page)
              onClick={[Function]}
              page={2}
              selected={false}
            />,
            <Jss(Page)
              onClick={[Function]}
              page={3}
              selected={false}
            />,
            <Jss(Break)
              label="..."
            />,
            <Jss(Page)
              onClick={[Function]}
              page={8}
              selected={false}
            />,
            <Jss(Page)
              onClick={[Function]}
              page={9}
              selected={false}
            />,
            <Jss(Page)
              onClick={[Function]}
              page={10}
              selected={false}
            />,
          ],
          <li
            className="btn next"
            onClick={[Function]}
            tabIndex="0"
          >
            Next
             
            <Jss(Icon)
              colors={
                Array [
                  "#adb4bb",
                ]
              }
              iconName="arrowDown"
              transition="0.3s all"
            />
          </li>,
        ],
        "className": "pager",
      },
      "ref": null,
      "rendered": Array [
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": Array [
              <Jss(Icon)
                colors={
                  Array [
                    "#adb4bb",
                  ]
                }
                iconName="arrowDown"
                transition="0.3s all"
              />,
              " ",
              "Previous",
            ],
            "className": "btn prev disabled",
            "onClick": [Function],
            "tabIndex": "0",
          },
          "ref": null,
          "rendered": Array [
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "class",
              "props": Object {
                "colors": Array [
                  "#adb4bb",
                ],
                "iconName": "arrowDown",
                "transition": "0.3s all",
              },
              "ref": null,
              "rendered": null,
              "type": [Function],
            },
            " ",
            "Previous",
          ],
          "type": "li",
        },
        Object {
          "instance": null,
          "key": "1",
          "nodeType": "class",
          "props": Object {
            "onClick": [Function],
            "page": 1,
            "selected": true,
          },
          "ref": null,
          "rendered": null,
          "type": [Function],
        },
        Object {
          "instance": null,
          "key": "2",
          "nodeType": "class",
          "props": Object {
            "onClick": [Function],
            "page": 2,
            "selected": false,
          },
          "ref": null,
          "rendered": null,
          "type": [Function],
        },
        Object {
          "instance": null,
          "key": "3",
          "nodeType": "class",
          "props": Object {
            "onClick": [Function],
            "page": 3,
            "selected": false,
          },
          "ref": null,
          "rendered": null,
          "type": [Function],
        },
        Object {
          "instance": null,
          "key": "4",
          "nodeType": "class",
          "props": Object {
            "label": "...",
          },
          "ref": null,
          "rendered": null,
          "type": [Function],
        },
        Object {
          "instance": null,
          "key": "8",
          "nodeType": "class",
          "props": Object {
            "onClick": [Function],
            "page": 8,
            "selected": false,
          },
          "ref": null,
          "rendered": null,
          "type": [Function],
        },
        Object {
          "instance": null,
          "key": "9",
          "nodeType": "class",
          "props": Object {
            "onClick": [Function],
            "page": 9,
            "selected": false,
          },
          "ref": null,
          "rendered": null,
          "type": [Function],
        },
        Object {
          "instance": null,
          "key": "10",
          "nodeType": "class",
          "props": Object {
            "onClick": [Function],
            "page": 10,
            "selected": false,
          },
          "ref": null,
          "rendered": null,
          "type": [Function],
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": Array [
              "Next",
              " ",
              <Jss(Icon)
                colors={
                  Array [
                    "#adb4bb",
                  ]
                }
                iconName="arrowDown"
                transition="0.3s all"
              />,
            ],
            "className": "btn next",
            "onClick": [Function],
            "tabIndex": "0",
          },
          "ref": null,
          "rendered": Array [
            "Next",
            " ",
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "class",
              "props": Object {
                "colors": Array [
                  "#adb4bb",
                ],
                "iconName": "arrowDown",
                "transition": "0.3s all",
              },
              "ref": null,
              "rendered": null,
              "type": [Function],
            },
          ],
          "type": "li",
        },
      ],
      "type": "ul",
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
        "lifecycles": Object {
          "componentDidUpdate": Object {
            "onSetState": true,
          },
          "getDerivedStateFromProps": true,
          "getSnapshotBeforeUpdate": true,
          "setState": Object {
            "skipsComponentDidUpdateOnNullish": true,
          },
        },
      },
    },
  },
}
`;

exports[`Pager styles matches the snapshot 1`] = `
Object {
  "btn": Object {
    "& span": Object {
      "marginBottom": "-2px",
    },
    "&:hover": Object {
      "background": "#ECECEE",
      "borderColor": "#ECECEE",
    },
    "border": "1px solid #bfbfbf",
    "borderRadius": "5px",
    "cursor": "pointer",
    "display": "inline-block",
    "fontFamily": "'HK Grotesk', sans-serif",
    "outline": "0",
    "padding": "3px 13px",
    "transition": "0.3s all",
  },
  "disabled": Object {
    "opacity": "0.4",
    "pointerEvents": "none",
  },
  "next": Object {
    "& span": Object {
      "transform": "rotate(-90deg)",
    },
    "marginLeft": "15px",
  },
  "pager": Object {
    "color": "#727272",
    "fontFamily": "'HK Grotesk', sans-serif",
    "fontSize": "13px",
    "listStyle": "none",
    "paddingLeft": "0",
  },
  "prev": Object {
    "& span": Object {
      "transform": "rotate(90deg)",
    },
    "marginRight": "15px",
  },
}
`;

exports[`PagerJSS matches the snapshot 1`] = `
ShallowWrapper {
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <Jss(Pager)
    breakLabel="..."
    disableInitialCallback={false}
    hideNumbers={false}
    marginPagesDisplayed={3}
    nextLabel="Next"
    pageCount={10}
    pageRangeDisplayed={2}
    previousLabel="Previous"
  />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateError": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "class",
    "props": Object {
      "breakLabel": "...",
      "classes": Object {
        "btn": "Pager-btn-0-1-15",
        "disabled": "Pager-disabled-0-1-18",
        "next": "Pager-next-0-1-17",
        "pager": "Pager-pager-0-1-14",
        "prev": "Pager-prev-0-1-16",
      },
      "disableInitialCallback": false,
      "hideNumbers": false,
      "marginPagesDisplayed": 3,
      "nextLabel": "Next",
      "pageCount": 10,
      "pageRangeDisplayed": 2,
      "previousLabel": "Previous",
    },
    "ref": null,
    "rendered": null,
    "type": [Function],
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "class",
      "props": Object {
        "breakLabel": "...",
        "classes": Object {
          "btn": "Pager-btn-0-1-15",
          "disabled": "Pager-disabled-0-1-18",
          "next": "Pager-next-0-1-17",
          "pager": "Pager-pager-0-1-14",
          "prev": "Pager-prev-0-1-16",
        },
        "disableInitialCallback": false,
        "hideNumbers": false,
        "marginPagesDisplayed": 3,
        "nextLabel": "Next",
        "pageCount": 10,
        "pageRangeDisplayed": 2,
        "previousLabel": "Previous",
      },
      "ref": null,
      "rendered": null,
      "type": [Function],
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
        "lifecycles": Object {
          "componentDidUpdate": Object {
            "onSetState": true,
          },
          "getDerivedStateFromProps": true,
          "getSnapshotBeforeUpdate": true,
          "setState": Object {
            "skipsComponentDidUpdateOnNullish": true,
          },
        },
      },
    },
  },
}
`;
